# NDKAudioTest

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lake/ndkaudiotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/lake/ndkaudiotest/: CallbackAudioInfo.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  list_item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lake/ndkaudiotest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
